vlib/v/checker/tests/go_mut_arg.out
vlib/v/checker/tests/go_mut_arg.vv:14:16: error: function in `go` statement cannot contain mutable non-reference arguments 
   12 |         a: 0
   13 |     }
   14 |     go change(mut x)
      |                   ^
   15 | }
